fix for image overflowing content column. tweak column widths

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -274,7 +274,7 @@ a:hover {
 }
 
 .event-detail-img {
-	width: 600px;
+	width: 100%;
 }
 
 .event .date {
